Fix a small overlapping error in the header

--- a/src/wwwroot/static/styles.css
+++ b/src/wwwroot/static/styles.css
@@ -9,7 +9,7 @@
 
 .blog-header {
     position: relative;
-    margin-bottom: 225px;
+    margin-bottom: 235px;
 }
 
 /* Actual stuff */
